fix: search bar btn not showing

--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -159,6 +159,9 @@ input[type="submit"] {
 .hide-show-search {
    display: none;
 }
+.search-input-btn {
+   display: inline-block;
+}
 main {
    background-color: white; 
    color: #333;
